[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HLAfreq"
version = "0.0.1dev0"
authors = [
  { name="David Wells", email="david.wells@vaccitech.co.uk" },
]
description = "Download and combine HLA frequency data from multiple studies"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Vaccitech/HLAfreq"
"Bug Tracker" = "https://github.com/Vaccitech/HLAfreq/issues"